--- a/style.css
+++ b/style.css
@@ -1,17 +1,51 @@
+main {
+  background-color: orange;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   background-color: rgb(21, 169, 254);
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 600px;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 10px;
+  box-shadow: 0 0 100px black;
 }
 
 .titulo {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  font-weight: bold;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: solid 5px black;
+  margin-bottom: 15px;
 }
 
 .input {
-  background-color: yellow;
-  width: 300px;
-  height: 150px;
-  display: relative;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  width: 200px;
+  height: 40px;
+  border-radius: 6px;
+  border: none;
+  font-weight: bold;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+.input label {
+  font-weight: bold;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
