--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 main {
-  background-color: orange;
+  background-color: black;
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -8,7 +8,7 @@ main {
 }
 
 .container {
-  background-color: rgb(21, 169, 254);
+  background-image: url("teste.webp");
   display: flex;
   flex-direction: column;
   width: 400px;
@@ -16,10 +16,11 @@ main {
   align-items: center;
   justify-content: space-evenly;
   border-radius: 10px;
-  box-shadow: 0 0 100px black;
+  box-shadow: 0 0 20px black;
 }
 
 .titulo {
+  color: rgb(14, 13, 86);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,24 +29,60 @@ main {
   font-weight: bold;
   font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
-  border-bottom: solid 5px black;
+  border-bottom: solid 5px white;
   margin-bottom: 15px;
 }
 
 .input {
+  color: rgb(14, 13, 86);
+  align-items: center;
   display: flex;
-  width: 200px;
-  height: 40px;
+  width: 300px;
+  height: 30px;
   border-radius: 6px;
   border: none;
   font-weight: bold;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  gap: 10px;
 }
 
 .input label {
+  width: 80px;
+  text-align: right;
+  color: rgb(14, 13, 86);
   font-weight: bold;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  font-weight: bold;
+  font-size: 16px;
+  color: rgb(14, 13, 86);
+  padding: 5px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+button:hover {
+  color: rgb(13, 107, 161);
+}
+
+.resultado {
+  user-select: none;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  margin-top: 0px;
+  align-items: center;
+  width: 250px;
+  height: 200px;
+  border-radius: 5px;
+  font-size: 16px;
+  color: rgb(14, 13, 86);
+  padding: 20px;
+  box-sizing: border-box;
 }
