--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 main {
-  background-color: black;
+  background: #000000;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 17%,
+    rgba(166, 159, 159, 1) 51%,
+    rgba(171, 159, 159, 1) 51%,
+    rgba(13, 13, 11, 1) 85%
+  );
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -20,7 +27,7 @@ main {
 }
 
 .titulo {
-  color: rgb(14, 13, 86);
+  color: rgb(31, 136, 172);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,13 +35,13 @@ main {
   height: 50px;
   font-weight: bold;
   font-size: 40px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
   border-bottom: solid 5px white;
   margin-bottom: 15px;
 }
 
 .input {
-  color: rgb(14, 13, 86);
+  color: rgb(31, 136, 172);
   align-items: center;
   display: flex;
   width: 300px;
@@ -43,7 +50,7 @@ main {
   border: none;
   font-weight: bold;
   font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
   text-align: center;
   gap: 10px;
 }
@@ -51,38 +58,51 @@ main {
 .input label {
   width: 80px;
   text-align: right;
-  color: rgb(14, 13, 86);
+  color: rgb(31, 136, 172);
   font-weight: bold;
   font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 button {
-  width: 100px;
-  height: 30px;
-  font-weight: bold;
+  background: #b8b8b8;
+  background-image: -webkit-linear-gradient(top, #b8b8b8, #666666);
+  background-image: -moz-linear-gradient(top, #b8b8b8, #666666);
+  background-image: -ms-linear-gradient(top, #b8b8b8, #666666);
+  background-image: -o-linear-gradient(top, #b8b8b8, #666666);
+  background-image: linear-gradient(to bottom, #b8b8b8, #666666);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  color: rgb(0, 0, 0);
   font-size: 16px;
-  color: rgb(14, 13, 86);
-  padding: 5px;
-  border-radius: 50px;
-  cursor: pointer;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 button:hover {
-  color: rgb(13, 107, 161);
+  background: #5b707d;
+  background-image: -webkit-linear-gradient(top, #5b707d, #282d30);
+  background-image: -moz-linear-gradient(top, #5b707d, #282d30);
+  background-image: -ms-linear-gradient(top, #5b707d, #282d30);
+  background-image: -o-linear-gradient(top, #5b707d, #282d30);
+  background-image: linear-gradient(to bottom, #5b707d, #282d30);
+  text-decoration: none;
 }
 
 .resultado {
+  font-family: "Poppins", sans-serif;
   user-select: none;
-  background-color: rgb(169, 167, 179);
+  background-color: white;
   display: flex;
   margin-top: 0px;
   align-items: center;
-  width: 250px;
-  height: 200px;
+  width: 300px;
+  height: 100px;
   border-radius: 5px;
   font-size: 16px;
-  color: rgb(14, 13, 86);
+  color: rgb(31, 136, 172);
   padding: 20px;
   box-sizing: border-box;
 }
